--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -16,7 +16,13 @@ h3 { font-size: 1.44em; }
 h4 { font-size: 1.2em; }
 small { font-size: 0.833em; }
 @media screen and (min-width: 1400px) {
-  html { font-size: 1.25em; }
+  html { font-size: 1.2em; }
+}
+@media screen and (min-width: 1900px) {
+  html { font-size: 1.5em; }
+}
+@media screen and (min-width: 2560px) {
+  html { font-size: 1.7em; }
 }
 
 /*Font Family*/
