--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -57,21 +57,28 @@ body {
 	background-color: transparent !important;
 }
 
+
+@media screen and (min-width: 800px) {
+  .content-enter {transform: translateX(100%);}
+  .content-enter-active {transform: translateX(0%);}
+  .content-exit {transform: translateX(0%);}
+  .content-exit-active {transform: translateX(-100%);}    
+}
 .content-enter {
   opacity: 0.01;
-  transform: translateX(100%);  
+  /*transform: translateX(100%);  */
 }
 .content-enter-active {
-  transform: translateX(0%);    
+  /*transform: translateX(0%);    */
   opacity: 1;
   transition: all 300ms ease-out;
 }
 .content-exit {
-  transform: translateX(0%);    
+  /*transform: translateX(0%);    */
   opacity: 1;
 }
 .content-exit-active {
-  transform: translateX(-100%);    
+  /*transform: translateX(-100%);    */
   opacity: 0.01;
   transition: all 300ms ease-out;
 }
