--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -66,7 +66,8 @@ does screw up the back to top button
   height: 100%;
 	background-color: transparent !important;
   overflow-y: scroll;
-  -webkit-overflow-scrolling:touch;  
+  -webkit-overflow-scrolling:touch;
+  padding-bottom: 15px;
 }
 
 
